# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: 404.html  index.html  show.html
